Ajout d'un fonction permettant la mise à jour des classes pour les dots
Ajout d'une fonction pour changer le contenu de la bannière

Mis à jour de event listener pour actualiser le dot et la bannière actuelle en fonction du clique sur la flèche de gauche ou de droite

Mise à jour du fichier css et html pour faire correspondre la classe tagLine associé au code js

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,6 +125,7 @@ header {
 	position: absolute;
     background-color: transparent;
     border: none;
+	cursor: pointer;
 }
 #banner .arrow__left {
 	left: 10px;
@@ -151,7 +152,7 @@ header {
 	background-color: #fff;
 }
 /* Fin du code CSS pour le carousel */
-#banner p {
+.tagLine, .tagLine p {
 	font-family: 'Roboto Slab', sans-serif;
 	font-weight: 900;
 	font-size: 50px;
@@ -160,7 +161,7 @@ header {
 	text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 	text-align: center;
 }
-#banner span {
+.tagLine span {
 	display: block;
 	font-weight: 400;
 	font-size: 30px;
